--- a/website/admin/style/_general.scss
+++ b/website/admin/style/_general.scss
@@ -17,8 +17,6 @@ body {
     font-size: 42pt;
 }
 header{
-    width: 100vw;
-    max-width: 100vw;
     z-index: 1;
     background-color: white;
     position: sticky;
